# Algoritmos-I

L09/CLion/L09-BusquedaYOrdenamiento/: CMakeLists.txt  main.cpp
L09/CLion/L09-BusquedaYOrdenamiento/src/: definiciones.h  solucion.cpp  solucion.h
L09/CLion/L09-BusquedaYOrdenamiento/test/: aparicionesDe.cpp
L09/Terminal/L09-BusquedaYOrdenamiento/: main.cpp
Labo05/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Labo06-CLion/: CMakeLists.txt
Labo06-CLion/src/: puntaje.h  rotar.cpp  rotar.h  sandia.cpp  subSecuenciaQueSuma.h
Labo06-CLion/test/: agruparAnagramasTEST.cpp  puntajeTEST.cpp  sandiaTEST.cpp
Labo06-Terminal/: agruparAnagramas.gcda  agruparAnagramasTEST.gcda  agruparAnagramasTEST.gcno  cobertura  esPrimo.gcda  esPrimoTEST.gcda  esPrimoTEST.gcno  gtest-all.gcda  gtest-all.gcno  labo6  main.cpp  main.gcda  main.gcno  puntaje.gcda  puntajeTEST.gcda  puntajeTEST.gcno  rotar.gcda  rotarTEST.gcda  rotarTEST.gcno  sandia.gcda  sandiaTEST.gcda  sandiaTEST.gcno  subSecuenciaQueSuma.gcda  subSecuenciaQueSumaTEST.gcda  subSecuenciaQueSumaTEST.gcno
Labo06-Terminal/coberturaHtml/: index-sort-f.html  index-sort-l.html  index.html
Labo06-Terminal/coberturaHtml/7/: index-sort-f.html  index-sort-l.html  index.html  iomanip.func-sort-c.html  iomanip.func.html  iomanip.gcov.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  new.func-sort-c.html  new.func.html  (+10 more)
Labo06-Terminal/src/: agruparAnagramas.cpp  agruparAnagramas.h  esPrimo.h  sandia.h  subSecuenciaQueSuma.cpp
Labo06-Terminal/test/: esPrimoTEST.cpp  rotarTEST.cpp  subSecuenciaQueSumaTEST.cpp
practica9/: CMakeLists.txt  main.cpp  solucion.cpp  soluciones.h
(+161 files in other folders)
